# nimem

./: .gitignore  example.py  pyproject.toml
nimem/: memory.py
nimem/core/: clustering.py  coreference.py  embeddings.py  entity_recognition.py  graph_store.py  model_loader.py  relation_extraction.py  schema.py  text_processing.py
nimem/tests/: test_clustering.py  test_embeddings.py  test_graph_store.py  test_memory.py  test_text_processing.py
